--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
 </head>
 
 <body>
-
     <header>
         <div class="inner">
             <div class="logo">
@@ -24,17 +24,14 @@
                 </div>
             </div>
             <nav>
-                <!-- Each of the below lines look complicated. There is a reason for this markup though!
-                <li> tag will be the container for the table.
+                <!-- <li> tag will be the container for the table.
                 <span> will be the part that centers the content inside it
                 <a> is the actual clickable part -->
-                <li><span><a href="" id = "titre">GNU/LINUX</a></span></li>
+                <li><span><p href="" id = "titre">GNU/LINUX</></span></li>
                 <li><span><a href=""class="button">About</a></span></li>
                 <li><span><a href=""class="button">Work</a></span></li>
                 <li><span><a href=""class="button">History</a></span></li>
                 <li><span><a href="" class="button">Contact</a></span></li>
-                <!-- On the line above, remove the class="button" if you don't want the final
-                element to be a button -->
             </nav>
         </div>
     </header>
