--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!-- <li> tag will be the container for the table.
                 <span> will be the part that centers the content inside it
                 <a> is the actual clickable part -->
-                <li><span><p href="" id = "titre">GNU/LINUX</></span></li>
+                <li><span><h2 href="" id = "titre">GNU/LINUX</></span></li>
                 <li><span><a href=""class="button">About</a></span></li>
                 <li><span><a href=""class="button">Work</a></span></li>
                 <li><span><a href=""class="button">History</a></span></li>
