adding bg color + part a main pages

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GNU/linux</title>
     <link rel="stylesheet" href="style.css" link>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
 </head>
 
@@ -35,54 +32,15 @@
             </nav>
         </div>
     </header>
-    <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni enim omnis sed aliquam tempora mollitia repudiandae natus aperiam asperiores, quidem eum quo eaque facilis corporis, non quae delectus, veritatis voluptatibus. Ullam excepturi similique sit
-        deleniti nobis necessitatibus id, tempora earum iste magnam quis ut animi nostrum non molestias corporis cupiditate provident officiis quasi autem, repudiandae tenetur! Quibusdam, blanditiis delectus. Consequatur! Laudantium porro perspiciatis
-        delectus eveniet earum ad sequi in dolores enim recusandae, quo sed mollitia sit ab totam esse dolorum deleniti explicabo laboriosam. Impedit blanditiis numquam animi, molestiae minima enim! Vero fugiat possimus natus voluptatum fugit, iste cupiditate
-        inventore, velit distinctio corrupti facilis sunt nam praesentium totam similique debitis obcaecati. Adipisci architecto fugit eveniet repellendus perspiciatis? Possimus quidem error doloremque? Modi laboriosam cumque nemo nostrum quaerat blanditiis
-        corrupti soluta repellat facilis earum. Repellat, tenetur atque. Possimus quod fugit animi, at molestias commodi, laborum consequuntur debitis accusamus reprehenderit et ipsam mollitia. Voluptatibus, tempora enim quibusdam voluptate quas cumque
-        praesentium sit assumenda, facilis laudantium cupiditate dolorem exercitationem corrupti asperiores ipsum natus obcaecati! Rem optio at perspiciatis explicabo doloribus atque quo ducimus ea? Voluptas corporis fugiat delectus rerum, omnis deserunt
-        at. Blanditiis libero tempora molestias dignissimos, debitis, repellendus fugit aspernatur quae molestiae similique facere optio fuga recusandae natus, voluptas quidem maxime. Animi, vitae? Voluptates veritatis, similique natus saepe molestiae
-        quos voluptatibus architecto dolor labore quo hic repudiandae illo odio et ipsum id maxime nam reiciendis eveniet, nulla ut minus nisi quam porro! Neque! Quisquam, dolor! Qui neque dolores rerum eligendi odio voluptates nostrum architecto atque
-        delectus velit illo at ratione veniam facilis, aspernatur, accusamus ducimus. Quod neque animi quisquam at veritatis! Magnam, soluta. Velit qui nostrum illo vero. Fugiat nam et consequatur ipsum facilis aperiam non, natus, dolore dicta laboriosam
-        nostrum. Debitis nobis quos minima doloremque fuga delectus aliquam amet architecto magni? Eum. Iste quas tempore in doloribus expedita explicabo magnam ab placeat, corrupti delectus obcaecati consequuntur temporibus at maxime. Reiciendis obcaecati
-        recusandae eius corrupti optio neque aliquid earum voluptate, nobis dolorum ipsam. Minima voluptatem vitae numquam ipsam earum animi tempore saepe quisquam laborum doloremque atque delectus cum aut, quod commodi ex accusamus expedita tempora vero!
-        Repudiandae quam molestiae excepturi, nemo dolore eos! Magni esse porro neque? Earum voluptate dolor delectus maiores nesciunt ipsum voluptatum dignissimos dolores aut animi, numquam quae, eius neque, at praesentium harum alias error! Omnis nemo
-        labore ipsa commodi? Laborum animi alias similique eligendi. Modi est ab itaque eveniet iure pariatur veritatis quod quas quisquam! Praesentium asperiores quidem dolor iste suscipit eligendi officia, earum, ea esse temporibus illo rem? Doloribus
-        natus voluptatem aliquid harum rerum quo nobis ullam praesentium autem. Illo accusamus, vitae a voluptatem, perferendis autem facere voluptates, ab repellendus odio alias deleniti. Nisi quibusdam odio unde deserunt! Eveniet, aliquam dignissimos
-        veritatis, quam voluptatem asperiores, quis doloremque non molestias doloribus eaque. Perferendis a explicabo minima rem eligendi quia quae quisquam repudiandae neque magni, officiis eaque modi, excepturi facilis? Nostrum optio qui atque animi
-        ipsam ex sequi adipisci reprehenderit eius, enim saepe veniam ea accusamus expedita assumenda in tempore! Quas, maiores enim inventore illum voluptas alias dignissimos officia similique! Corporis quae est libero? Aliquid ut debitis quisquam dignissimos,
-        odit quis officia eaque! Eius accusamus optio ducimus culpa ipsum pariatur esse deleniti. Nulla deleniti dolorem non maxime, impedit eligendi incidunt. Dolorem fuga saepe rem facere adipisci ratione atque temporibus incidunt, voluptatem, nulla
-        fugiat itaque debitis quibusdam repellat totam animi maxime, eum rerum dicta asperiores at! Maiores eos reprehenderit omnis blanditiis? Sit animi vitae corporis, exercitationem modi culpa ullam illum omnis repellendus voluptatibus ad deserunt
-        tenetur recusandae necessitatibus ipsa alias voluptatem. Quas illo minima explicabo nisi exercitationem nostrum deserunt reprehenderit consequuntur. Expedita iste deleniti laboriosam dignissimos aut rerum soluta delectus placeat consequuntur autem
-        veniam tempore voluptatem, beatae numquam architecto odio quaerat laudantium assumenda inventore voluptates voluptatibus! Impedit vitae obcaecati unde perspiciatis! Quas accusantium adipisci deleniti impedit ipsam doloremque deserunt explicabo,
-        ea delectus voluptates sapiente distinctio nostrum. Veniam delectus reiciendis iure quam officia ratione placeat, molestiae eius atque maiores eligendi, ad modi! Dolor sapiente eos ducimus facilis est non eveniet soluta neque totam quibusdam!
-        Soluta repellat, ut officia ex a corrupti repellendus exercitationem in sapiente provident culpa possimus! Sit, molestias quas. Illum. Ipsa adipisci, temporibus quos, rem quibusdam odio modi voluptatibus exercitationem veniam repellendus iusto.
-        Autem perferendis facere dolore quia optio voluptas minima possimus obcaecati sunt id, ipsam eligendi quibusdam suscipit repellendus. Mollitia adipisci saepe rem sed, magnam odio! Dolore reprehenderit optio rem id? At cupiditate enim dolorum asperiores,
-        voluptas id maxime voluptates ratione omnis beatae nisi ut labore nemo obcaecati explicabo. Perferendis, sunt et. Magni non dolore, minima perspiciatis quaerat delectus nam possimus modi expedita fugiat, quis sunt ab debitis exercitationem unde.
-        Provident nulla incidunt nesciunt? Voluptatibus magnam distinctio corrupti eligendi. Ullam unde, velit dignissimos sequi debitis ea autem ad quasi, quibusdam sint, optio repudiandae! Molestiae vel quia voluptates neque rem, ab corporis nihil dignissimos
-        velit! Repudiandae aperiam obcaecati at sit. Id repudiandae quos molestiae. Consectetur in vitae animi maiores eligendi, hic dolorem ipsum quis quisquam a asperiores, quam sit! Dolorem dicta sequi repellat molestias pariatur reprehenderit accusamus
-        sed obcaecati velit? Ex obcaecati, doloribus, rerum ut mollitia suscipit aliquid assumenda ea illum ipsa vitae ad placeat inventore dolorem pariatur, temporibus id quod quisquam voluptates natus similique eius cupiditate nulla rem? Enim! Exercitationem
-        cupiditate perferendis quod reprehenderit praesentium ipsum molestiae! Obcaecati veritatis at dolorem rerum, impedit nam alias mollitia esse. Delectus, reprehenderit beatae repellendus dolorum iusto odit alias ipsa consequatur quidem ut. Adipisci
-        ea, quis eaque eligendi, eum saepe iure numquam neque consequatur praesentium maxime obcaecati ducimus quia aperiam porro dicta, dolor atque omnis. Iusto, ipsa qui dolorem ullam magni deserunt excepturi. Est dolorum expedita, veritatis non eos
-        consequuntur neque adipisci cumque, incidunt accusamus esse voluptatum consectetur illum deleniti perferendis quia eligendi cupiditate. Minima beatae tempore molestias expedita rem dolores. Voluptate, accusamus. Consectetur officia quia porro
-        architecto quasi quo. Illum voluptatem reiciendis dolore totam iure, natus ex voluptas soluta. Esse earum eligendi illum perspiciatis id fugiat! Dolor inventore repellat ex amet voluptas? Sed nemo illo distinctio ab officiis reiciendis quibusdam
-        totam assumenda modi voluptates reprehenderit amet, maiores, voluptatem aliquam quasi? Ut ad iusto quo nulla dicta dignissimos quaerat nesciunt at accusantium aut! Velit magnam quis dicta. Alias labore dicta exercitationem optio animi nulla magnam
-        voluptate id saepe sed odio eius, a ab ea! Eligendi maxime voluptatem autem eaque dolore omnis, odit nesciunt. Quis eligendi quasi sapiente quo qui earum incidunt consequuntur praesentium laborum. Sit tempore ea quasi reprehenderit qui placeat
-        animi corporis, enim illum accusantium debitis similique! Eveniet corporis dolorem est error? Minima ipsam accusantium quasi placeat veniam atque explicabo perspiciatis dolore enim itaque dolores commodi esse aliquid, obcaecati quam pariatur,
-        provident, ullam tempore facilis in voluptatum soluta sequi vero doloribus. Deleniti. Aspernatur, quasi laudantium adipisci fugit dolores hic dolorem dolor sunt et pariatur numquam? Architecto atque veritatis facilis tempore debitis ipsum? Amet,
-        ut velit nostrum aperiam nulla aspernatur enim dignissimos officiis. Voluptatem minus eaque porro officia assumenda ratione consequatur recusandae dignissimos reiciendis reprehenderit natus fugit obcaecati aliquid alias suscipit omnis voluptatibus
-        explicabo debitis repellat, placeat doloribus magni unde. Eius, unde consequatur? Consectetur expedita velit rem harum sed ad vitae repellat mollitia deserunt, aperiam laboriosam delectus voluptatum aspernatur sapiente saepe dicta veniam aut molestiae
-        atque recusandae reprehenderit modi reiciendis. Laborum, nihil ex? Optio magni quisquam deserunt facere corporis dolorem expedita id sapiente quidem cumque fugiat animi, itaque placeat quasi, accusamus unde impedit quos recusandae perspiciatis!
-        Vel voluptatum magni sint necessitatibus. Id, excepturi. Ab dolores earum dolorum! Magni, ab, assumenda tenetur enim fugiat mollitia saepe id consequatur sit accusamus delectus maxime officia unde odit! Tempore illum animi quod quis, similique
-        natus accusantium! Minima? Illo, recusandae nulla, eaque porro mollitia cumque aut non earum incidunt quod impedit? Quaerat, illum deserunt repellendus porro excepturi, accusantium magnam ut earum dignissimos quis mollitia. Optio illo consectetur
-        soluta! Similique quae perspiciatis est dolorem accusamus, minus, quibusdam nemo veritatis blanditiis saepe incidunt distinctio, iure dolore nam? Iure corrupti placeat illo recusandae sed. A quia iusto sit earum, in tenetur. Sed quo animi vel
-        vitae expedita nobis libero perspiciatis tempore assumenda fuga nostrum sunt unde magni, earum necessitatibus soluta odio amet quas alias eaque officiis distinctio laboriosam eum. Odio, delectus! Deleniti illo explicabo a esse. Amet tempore impedit
-        debitis iure sit. Neque, commodi, nostrum minus facere unde, sed reiciendis ea est amet autem omnis dolores at aperiam quas dolor cupiditate. Aliquid tempora ratione magnam enim iste quasi nobis in distinctio? Eius, illo officiis quasi error praesentium
-        architecto quisquam ipsum dolores, itaque fugiat iusto. Deserunt, nulla laboriosam dolorum dolorem rerum atque! Repellat, reprehenderit dolorum magni unde deleniti blanditiis praesentium quaerat placeat minus consequatur ducimus molestias earum
-        beatae alias quisquam velit ipsam cupiditate magnam debitis repellendus, laborum perspiciatis, omnis quam doloribus? Aliquid. Quaerat debitis vitae voluptatibus ipsum obcaecati nemo magnam culpa corrupti. Officiis expedita ut eius voluptatum reprehenderit
-        accusamus cumque, placeat deleniti voluptate quam a, quibusdam distinctio ratione esse labore excepturi culpa? Quod mollitia recusandae, harum facere omnis voluptatem? Architecto non, ad mollitia nostrum at nam debitis. Optio obcaecati consequuntur
-        molestias, ea est veniam quae harum, rerum quisquam, eius ad debitis iusto.
-    </p>
+    <h1 class="center">
+        GNU/LINUX
+    </h1>
+    <div class="center">
+        <img src="GNU_and_Tux.svg" alt="gnu+linux">
+    </div>
+
+
     <script src="script.js"></script>
 </body>
+
+</html>
