--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>GNU/linux</title>
     <link rel="stylesheet" href="style.css" link>
     <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
                 <li><span><h2 href="" id = "titre">GNU/LINUX</></span></li>
                 <li><span><a href=""class="button">GNU</a></span></li>
                 <li><span><a href=""class="button">LINUX</a></span></li>
-                <li><span><a href=""class="button">HISTOIRE</a></span></li>
+                <li><span><a href=""class="button">WIP</a></span></li>
                 <li><span><a href="" class="button">Contact</a></span></li>
             </nav>
         </div>
@@ -45,70 +46,15 @@
         </div>
         <div class="row row-1">
             <section>
-                <i class="icon fas fa-home"></i>
+                <i class="icon fas fa-map-marker-alt"></i>
                 <div class="details">
-                    <span class="title">Title of Section 1</span>
-                    <span>1st Jan 2021</span>
+                    <span class="title">Guerres Unix</span>
+                    <span>1969</span>
                 </div>
-                <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+                <p>Les guerres Unix étaient des luttes entre les fournisseurs pour établir une norme pour le système d'exploitation Unix à la fin des années 1980 et au début des années 1990.</p>
                 <div class="bottom">
-                    <a href="#">Read more</a>
-                    <i>- Someone famous</i>
-                </div>
-            </section>
-        </div>
-        <div class="row row-2">
-            <section>
-                <i class="icon fas fa-star"></i>
-                <div class="details">
-                    <span class="title">Title of Section 2</span>
-                    <span>2nd Jan 2021</span>
-                </div>
-                <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                <div class="bottom">
-                    <a href="#">Read more</a>
-                </div>
-            </section>
-        </div>
-        <div class="row row-1">
-            <section>
-                <i class="icon fas fa-rocket"></i>
-                <div class="details">
-                    <span class="title">Title of Section 3</span>
-                    <span>3rd Jan 2021</span>
-                </div>
-                <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                <div class="bottom">
-                    <a href="#">Read more</a>
-                    <i>- Someone famous</i>
-                </div>
-            </section>
-        </div>
-        <div class="row row-2">
-            <section>
-                <i class="icon fas fa-globe"></i>
-                <div class="details">
-                    <span class="title">Title of Section 4</span>
-                    <span>4th Jan 2021</span>
-                </div>
-                <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                <div class="bottom">
-                    <a href="#">Read more</a>
-                    <i>- Someone famous</i>
-                </div>
-            </section>
-        </div>
-        <div class="row row-1">
-            <section>
-                <i class="icon fas fa-paper-plane"></i>
-                <div class="details">
-                    <span class="title">Title of Section 5</span>
-                    <span>5th Jan 2021</span>
-                </div>
-                <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                <div class="bottom">
-                    <a href="#">Read more</a>
-                    <i>- Someone famous</i>
+                    <a href="https://fr.wikipedia.org/wiki/Unix">plus d'informations</a>
+                    <i>- Dennis Ritchie et Brian Kernighan</i>
                 </div>
             </section>
         </div>
@@ -116,18 +62,74 @@
             <section>
                 <i class="icon fas fa-map-marker-alt"></i>
                 <div class="details">
-                    <span class="title">Title of Section 6</span>
+                    <span class="title">Gnu’s Not Unix </span>
+                    <span>1983</span>
+                </div>
+                <p>GNU est un système d’exploitation libre créé en 1983 par Richard Stallman, maintenu par le projet GNU. Il reprend les concepts et le fonctionnement d’UNIX</p>
+                <div class="bottom">
+                    <a href="https://fr.wikipedia.org/wiki/GNU">plus d'informations</a>
+                    <i>- Richard Stallman</i>
+                </div>
+            </section>
+        </div>
+        <div class="row row-1">
+            <section>
+                <i class="icon fas fa-map-marker-alt"></i>
+                <div class="details">
+                    <span class="title">Noyau Linux</span>
+                    <span>25 Aout 1991</span>
+                </div>
+                <p>Le noyau Linux est un noyau de système d'exploitation de type UNIX. Il est utilisé dans plusieurs systèmes d'exploitation</p>
+                <div class="bottom">
+                    <a href="https://fr.wikipedia.org/wiki/Noyau_Linux">plus d'informations</a>
+                    <i>- Linus Torvalds</i>
+                </div>
+            </section>
+        </div>
+        <div class="row row-2">
+            <section>
+                <i class="icon fas fa-map-marker-alt"></i>
+                <div class="details">
+                    <span class="title">GNU/Linux</span>
+                    <span>17 septembre 1991</span>
+                </div>
+                <p>GNU/Linux est une famille de systèmes d'exploitation open source de type Unix fondé sur le noyau Linux</p>
+                <div class="bottom">
+                    <a href="https://fr.wikipedia.org/wiki/Linux">plus d'informations</a>
+                    <i>- Linus Torvalds and Richard Stallman </i>
+                </div>
+            </section>
+        </div>
+        <div class="row row-1 ">
+            <section>
+                <i class="icon fas fa-map-marker-alt "></i>
+                <div class="details ">
+                    <span class="title ">Slackware</span>
+                    <span>16 juillet 1993</span>
+                </div>
+                <p>Elle a été historiquement une des premières permettant de faire tourner Linux in situ depuis un CD-ROM, dès 1995.</p>
+                <div class="bottom ">
+                    <a href="https://fr.wikipedia.org/wiki/Slackware">plus d'informations</a>
+                    <i>- Patrick Volkerding</i>
+                </div>
+            </section>
+        </div>
+        <div class="row row-2 ">
+            <section>
+                <i class="icon fas fa-map-marker-alt "></i>
+                <div class="details ">
+                    <span class="title ">Title of Section 6</span>
                     <span>6th Jan 2021</span>
                 </div>
                 <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
-                <div class="bottom">
+                <div class="bottom ">
                     <a href="#">Read more</a>
-                    <i>- Someone famous</i>
+                    <i>- </i>
                 </div>
             </section>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js "></script>
 </body>
 
 </html>
