project on rhe finsig line

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
         <div class="inner">
             <div class="logo">
                 <div>
-                    <!-- The below line can be an image or a h1, either will work -->
                     <img src="logo.png" alt="logo">
-                    <!-- <h1>My Logo</h1> -->
+
                 </div>
             </div>
             <nav>
                 <!-- <li> tag will be the container for the table.
                 <span> will be the part that centers the content inside it
                 <a> is the actual clickable part -->
-                <li><span><h2 href="" id = "titre">GNU/LINUX</></span></li>
-                <li><span><a href=""class="button">GNU</a></span></li>
+                <li><span><h2  id = "titre">GNU/LINUX</></span></li>
+                <li><span><a href="index.html"class="button">GNU/LINUX</a></span></li>
+                <li><span><a href="gnu.html"class="button">GNU</a></span></li>
                 <li><span><a href=""class="button">LINUX</a></span></li>
-                <li><span><a href=""class="button">WIP</a></span></li>
-                <li><span><a href="" class="button">Contact</a></span></li>
+                <li><span><a href="" class="button">UN KERNEL?</a></span></li>
+                <li><span><a href="" class="button">FHS</a></span></li>
             </nav>
         </div>
     </header>
@@ -53,7 +53,7 @@
                 </div>
                 <p>Les guerres Unix étaient des luttes entre les fournisseurs pour établir une norme pour le système d'exploitation Unix à la fin des années 1980 et au début des années 1990.</p>
                 <div class="bottom">
-                    <a href="https://fr.wikipedia.org/wiki/Unix">plus d'informations</a>
+                    <a href="https://fr.wikipedia.org/wiki/Unix">plus</a>
                     <i>- Dennis Ritchie et Brian Kernighan</i>
                 </div>
             </section>
@@ -67,7 +67,7 @@
                 </div>
                 <p>GNU est un système d’exploitation libre créé en 1983 par Richard Stallman, maintenu par le projet GNU. Il reprend les concepts et le fonctionnement d’UNIX</p>
                 <div class="bottom">
-                    <a href="https://fr.wikipedia.org/wiki/GNU">plus d'informations</a>
+                    <a href="https://fr.wikipedia.org/wiki/GNU">plus </a>
                     <i>- Richard Stallman</i>
                 </div>
             </section>
@@ -81,7 +81,7 @@
                 </div>
                 <p>Le noyau Linux est un noyau de système d'exploitation de type UNIX. Il est utilisé dans plusieurs systèmes d'exploitation</p>
                 <div class="bottom">
-                    <a href="https://fr.wikipedia.org/wiki/Noyau_Linux">plus d'informations</a>
+                    <a href="https://fr.wikipedia.org/wiki/Noyau_Linux">plus </a>
                     <i>- Linus Torvalds</i>
                 </div>
             </section>
@@ -95,7 +95,7 @@
                 </div>
                 <p>GNU/Linux est une famille de systèmes d'exploitation open source de type Unix fondé sur le noyau Linux</p>
                 <div class="bottom">
-                    <a href="https://fr.wikipedia.org/wiki/Linux">plus d'informations</a>
+                    <a href="https://fr.wikipedia.org/wiki/Linux">plus </a>
                     <i>- Linus Torvalds and Richard Stallman </i>
                 </div>
             </section>
@@ -109,7 +109,7 @@
                 </div>
                 <p>Elle a été historiquement une des premières permettant de faire tourner Linux in situ depuis un CD-ROM, dès 1995.</p>
                 <div class="bottom ">
-                    <a href="https://fr.wikipedia.org/wiki/Slackware">plus d'informations</a>
+                    <a href="https://fr.wikipedia.org/wiki/Slackware">plus </a>
                     <i>- Patrick Volkerding</i>
                 </div>
             </section>
