--- a/index.html
+++ b/index.html
@@ -21,15 +21,12 @@
                 </div>
             </div>
             <nav>
-                <!-- <li> tag will be the container for the table.
-                <span> will be the part that centers the content inside it
-                <a> is the actual clickable part -->
                 <li><span><h2  id = "titre">GNU/LINUX</></span></li>
                 <li><span><a href="index.html"class="button">GNU/LINUX</a></span></li>
                 <li><span><a href="gnu.html"class="button">GNU</a></span></li>
-                <li><span><a href=""class="button">LINUX</a></span></li>
-                <li><span><a href="" class="button">UN KERNEL?</a></span></li>
-                <li><span><a href="" class="button">FHS</a></span></li>
+                <li><span><a href="linux.html"class="button">LINUX</a></span></li>
+                <li><span><a href="kernel.html" class="button">UN KERNEL?</a></span></li>
+                <li><span><a href="https://i.imgur.com/0vfM4dm.png" class="button">FHS</a></span></li>
             </nav>
         </div>
     </header>
@@ -118,12 +115,12 @@
             <section>
                 <i class="icon fas fa-map-marker-alt "></i>
                 <div class="details ">
-                    <span class="title ">Title of Section 6</span>
-                    <span>6th Jan 2021</span>
+                    <span class="title ">Les 30 ans de linux </span>
+                    <span> 17 septembre 2021</span>
                 </div>
-                <p>Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed qui veroes praesentium maiores, sint eos vero sapiente voluptas debitis dicta dolore.</p>
+                <p> Au debut c'etait juste un hobby maias maintenant il est utilise par tout le monde sans le savoir plus d'une fois par jour </p>
                 <div class="bottom ">
-                    <a href="#">Read more</a>
+                    <a href="https://i.redd.it/nne9uzhyjn581.png">plus </a>
                     <i>- </i>
                 </div>
             </section>
