--- a/linux.html
+++ b/linux.html
@@ -21,15 +21,12 @@
                 </div>
             </div>
             <nav>
-                <!-- <li> tag will be the container for the table.
-                <span> will be the part that centers the content inside it
-                <a> is the actual clickable part -->
                 <li><span><h2  id = "titre">GNU/LINUX</></span></li>
                 <li><span><a href="index.html"class="button">GNU/LINUX</a></span></li>
                 <li><span><a href="gnu.html"class="button">GNU</a></span></li>
                 <li><span><a href="linux.html"class="button">LINUX</a></span></li>
-                <li><span><a href="" class="button">UN KERNEL?</a></span></li>
-                <li><span><a href="" class="button">FHS</a></span></li>
+                <li><span><a href="kernel.html" class="button">UN KERNEL?</a></span></li>
+                <li><span><a href="https://i.imgur.com/0vfM4dm.png" class="button">FHS</a></span></li>
             </nav>
         </div>
     </header>
@@ -37,8 +34,8 @@
 
         <img src="240px-LinuxCon_Europe_Linus_Torvalds_03_(cropped).jpg" alt="lt">
         <div id="gnu_box" class="right">
-            Linus Benedict Torvalds, né le 28 décembre 1969 à Helsinki en Finlande, est un informaticien américano-finlandais2,3 connu notamment pour avoir créé le noyau Linux en 1991 (à 21 ans). Il continue d'en diriger le développement, étant considéré comme le
-            « dictateur bienveillant à vie » (Benevolent Dictator for Life) de celui-ci. Il a également créé le logiciel de gestion de versions décentralisée Git et le logiciel d'enregistrement et de planification des plongées Subsurface
+            Linus Benedict Torvalds, né le 28 décembre 1969 à Helsinki en Finlande, est un informaticien américano-finlandais connu notamment pour avoir créé le noyau Linux en 1991 (à 21 ans). Il continue d'en diriger le développement, étant considéré comme le «
+            dictateur bienveillant à vie » (Benevolent Dictator for Life) de celui-ci. Il a également créé le logiciel de gestion de versions décentralisée Git et le logiciel d'enregistrement et de planification des plongées Subsurface
         </div>
     </div>
     <div class="left">
