--- a/gnu.html
+++ b/gnu.html
@@ -20,15 +20,12 @@
                 </div>
             </div>
             <nav>
-                <!-- <li> tag will be the container for the table.
-                <span> will be the part that centers the content inside it
-                <a> is the actual clickable part -->
-                <li><span><h2 id = "titre">GNU/LINUX</></span></li>
+                <li><span><h2  id = "titre">GNU/LINUX</></span></li>
                 <li><span><a href="index.html"class="button">GNU/LINUX</a></span></li>
                 <li><span><a href="gnu.html"class="button">GNU</a></span></li>
                 <li><span><a href="linux.html"class="button">LINUX</a></span></li>
-                <li><span><a href="" class="button">UN KERNEL?</a></span></li>
-                <li><span><a href="" class="button">FHS</a></span></li>
+                <li><span><a href="kernel.html" class="button">UN KERNEL?</a></span></li>
+                <li><span><a href="https://i.imgur.com/0vfM4dm.png" class="button">FHS</a></span></li>
             </nav>
         </div>
     </header>
