--- a/gnu.html
+++ b/gnu.html
@@ -25,7 +25,7 @@
                 <li><span><a href="gnu.html"class="button">GNU</a></span></li>
                 <li><span><a href="linux.html"class="button">LINUX</a></span></li>
                 <li><span><a href="kernel.html" class="button">UN KERNEL?</a></span></li>
-                <li><span><a href="https://i.imgur.com/0vfM4dm.png" class="button">FHS</a></span></li>
+                <li><span><a href="FHS.png" class="button">FHS</a></span></li>
             </nav>
         </div>
     </header>
